--- a/Profil.html
+++ b/Profil.html
@@ -2,18 +2,52 @@
 <html>
 <head>
 <title>Profil</title>
-  <media="screen and (max-width:700px)">
-	<link rel="stylesheet" type="text/css" href="Profil.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <media= screen and (max-width:700px)>
+	<link rel="stylesheet"  href="Profil.css">
 
 </head>
-<body>
+<body class ="body">
+  <div class="header">
+    <a href="#default" class="logo">AVIE</a>
+      <div class="header-right">
+        <a class="active" href="#suche">Search ...&#128269</a>
+        <a href="#chats">Chats</a>
+        <a href="#profil" class="profil">Profil</a>
 
-<h2>HTML Forms mit Radio Buttons und Submit Button</h2>
-<div class="rahmen">
+      </div>
+  </div>
+
+<h2>Dein Profil</h2>
+<div class="profilfeld">
+  <img src="https://us.123rf.com/450wm/yupiramos/yupiramos1712/yupiramos171221032/92184738-standard-m%C3%A4nnlich-avatar-mann-profilbild-symbol-vektor-illustration-kontur-farbbild.jpg" alt="Profilbild" class="profilbild">
+  <br><br>
+  <label for="name">Name: </label>
+  <br>
+  <input class="profilinfos" type="text" id="name" name="name" ><br><br>
+  <label for="Uname">Benutzername: </label>
+  <br>
+  <input class="profilinfos" type="text" id="Uname" name="Uname" >
+  <br><br>
+  <label for="beschr">Profilbeschreibung: </label>
+  <br>
+  <textarea class="profilinfos" id="beschr" name="beschr" rows="10" cols="50" >
+  </textarea>
+  <br><br><br>
+   
+<div class="speicherbutton">
+  <button type="button">Änderungen Speichern &#x1f4be </button>
+</div>
+
+  </div>
+<h2> Deine Beiträge</h2>
+<div class="beitragsfeld">
+  </div>
 
 
 
-<p></p>
+
 
 </body>
 </html>
