--- a/Profil.html
+++ b/Profil.html
@@ -22,7 +22,10 @@
 <h2>Dein Profil</h2>
 <div class="profilfeld">
   <img src="https://us.123rf.com/450wm/yupiramos/yupiramos1712/yupiramos171221032/92184738-standard-m%C3%A4nnlich-avatar-mann-profilbild-symbol-vektor-illustration-kontur-farbbild.jpg" alt="Profilbild" class="profilbild">
-  <br><br>
+  
+  <div class="profilrechts">
+    <p><b>Follower: 10 &nbsp&nbsp&nbsp&nbsp      Gefolgt: 10 &nbsp&nbsp&nbsp&nbsp</b></p>
+  </div>
   <label for="name">Name: </label>
   <br>
   <input class="profilinfos" type="text" id="name" name="name" ><br><br>
@@ -34,9 +37,9 @@
   <br>
   <textarea class="profilinfos" id="beschr" name="beschr" rows="10" cols="50" >
   </textarea>
-  <br><br><br>
+  <br>
    
-<div class="speicherbutton">
+<div class="profilrechts">
   <button type="button">Änderungen Speichern &#x1f4be </button>
 </div>
 
