--- a/webapp.html
+++ b/webapp.html
@@ -15,7 +15,7 @@
 						<input type="text" name="q" > &#128269 <!--Lupe-->
 					</a>
 					<div class="profil">
-						<a href="#profil">Profil</a> 
+						<a href="F:\AAADVM\2.Semester 2025\S2 SE2\githubPaulin\Paulin-se2\Profil.html">Profil</a> 
 					</div>
 					<a href="#chats">Chats</a>
 				</div>
