--- a/Profil.html
+++ b/Profil.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <media= screen and (max-width:700px)>
-	<link rel="stylesheet"  href="Profil.css">
+
+  
+	<link rel="stylesheet" type="text/css" href="{% static 'polls/Profil.css' %}">
 
 </head>
 <body class ="body">
