--- a/neueVersion/impressum.html
+++ b/neueVersion/impressum.html
@@ -49,8 +49,7 @@
     Véronique Mörke</p>
 
     <p><strong>Kontakt</strong></p>
-    <p>Telefon: ?<br>
-    E-Mail: <a href= "mailto:info-avie@gmx.de">info-avie@gmx.de</a></p>
+    <p>E-Mail: <a href= "mailto:info-avie@gmx.de">info-avie@gmx.de</a></p>
 
     <p><strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</strong></p>
     <p>Andreas Swid<br>
